// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`Canonical Home Page Ads should have the following properties 1`] = `
<div
  class="dotcom-ad"
  id="dotcom-leaderboard"
/>
`;

exports[`Canonical Home Page Ads should have the following properties 2`] = `
<div
  class="dotcom-ad"
  id="dotcom-mpu"
/>
`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "5",
  },
  {
    "p": "arabic.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:cx35pee6zvpt]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-arabic]",
  },
  {
    "x4": "[ar]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20News%20عربي]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.co.uk/arabic/send/u50853203",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "بي بي سي نيوز عربي في لغات أخرى",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "Do not share or sell my info",
  "url": "#",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 10`] = `
{
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"© 2025 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "الصفحة الحالية, رئيسية",
  "url": "/arabic",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "شاهد البث المباشر",
  "url": "/arabic/media-49522519",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "أخبار",
  "url": "/arabic/topics/cv2xyrnr8dnt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "اقتصاد",
  "url": "/arabic/topics/cqywj97d487t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "صحة وعلوم",
  "url": "/arabic/topics/clmj3d7282gt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "رياضة",
  "url": "/arabic/topics/cyx5kw7g1j2t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "فيديو",
  "url": "/arabic/topics/cz9mm6r1q5et",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 8`] = `
{
  "text": "تحقيقات",
  "url": "/arabic/topics/c51nnzdeg9zt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 9`] = `
{
  "text": "بودكاست",
  "url": "/arabic/topics/cljddp5lw0dt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 10`] = `
{
  "text": "برامجنا",
  "url": "/arabic/topics/crgyknwdlwnt",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"مرأة الخارقة ""`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="الرياضه"
  class="bbc-139onq"
  fetchpriority="high"
  loading="eager"
  src="https://ichef.test.bbci.co.uk/ace/standard/240/cpsdevpb/36C4/test/_63702041_tv000117434.jpg"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/arabic/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://localhost:7080/arabic"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"ar"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News عربي",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ar",
        "name": "Arabic",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/arabic",
        "@type": "WebPage",
        "name": "BBC News عربي",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
      "url": "http://localhost:7080/arabic",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/arabic/tv-and-radio-23233470",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/arabic/23231121",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/arabic/tv-and-radio-23233465",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/swahili/23231091",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/arabic/trending-23083197",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/arabic/business-23083189",
        },
      ],
      "name": "BBC News عربي",
      "numberOfItems": 6,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"ar"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`Canonical Home Page SEO OG title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://localhost:7080/arabic"`;

exports[`Canonical Home Page SEO Page title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2019-03-13",
  "text": "13 مارس/ آذار 2019",
}
`;
